# vclean

./: MANIFEST.in  README.md  __init__.py  environment.yml  pyproject.toml  setup.py
db/: single_pfam_099.txt
models/: best_lgb_model_fold3.txt  best_lgb_model_fold4.txt  best_lgb_model_v1.3.2.pickle
vclean/: __init__.py  cli.py
vclean/db/: single_pfam.txt  unique_single_pfam.txt
vclean/models/: best_lgb_model_fold0.txt  best_lgb_model_fold1.txt  best_lgb_model_fold2.txt
vclean/modules/: checkv.py  cli.py  codon.py  count_redundant_protein.py  download_database.py  download_database_for_cli.py  estimate_simu_contami.py  gc.py  lgb_model.py  penta_jelly.py  read_table.py  run.py  run_for_cli.py  seqkit.py  singlecopy_counts.py  tetra_jelly.py
