[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vclean"
authors = [
    {name = "Ryota Wagatsuma", email = "cold_bz@ruri.waseda.jp"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "lightgb",
    "biopython",
    "checkv",
    "seqkit",
    "kmer-jellyfish",
    "prodigal",
    "mmseqs2",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/TsumaR/vclean"
Source = "https://github.com/TsumaR/vclean"

[project.scripts]
vclean = "vclean.cli:cli"
