[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vclean"
version = "0.1.0:
authors = [
    {name = "Ryota Wagatsuma", email = "cold_bz@ruri.waseda.jp"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "lightgbm",
    "biopython",
]
dynamic = ["description"]

[project.urls]
Home = "https://github.com/TsumaR/vclean"
Source = "https://github.com/TsumaR/vclean"

[project.scripts]
vclean = "vclean.cli:cli"
